fix: increase padding on code block
* fix: increase padding on code block

* fix: remove rounded corner from code, table, and scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,10 +14,10 @@
 	@apply w-2 h-2 lg:w-3 lg:h-3
 }
 ::-webkit-scrollbar-track {
-	@apply bg-base-200 rounded-lg
+	@apply bg-base-200
 }
 ::-webkit-scrollbar-thumb {
-	@apply bg-primary-300 rounded-lg
+	@apply bg-primary-300
 }
 
 /* paragraph */
@@ -46,9 +46,9 @@ code {
 }
 pre {
 	@apply
-		my-4 py-2 pr-2 pl-4
+		my-4 p-4
 		bg-base-200 bg-opacity-30
-		rounded-lg overflow-x-auto
+		overflow-x-auto
 }
 
 /* blockquote */
@@ -64,7 +64,7 @@ table {
 	@apply
 		my-4 mx-auto w-full max-w-fit
 		border-collapse whitespace-nowrap
-		overflow-x-auto block rounded-lg
+		overflow-x-auto block
 }
 tr {
 	@apply
